# go-game

./: .gitattributes
backend/: .gitignore  CMakeLists.txt
backend/game/include/: board.hpp  enums.hpp  player.hpp  stone_group.hpp
backend/game/src/: board.cpp  player.cpp  stone_group.cpp
backend/server/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: GoBoard.tsx  SelectionColumn.tsx
frontend/src/pages/: Auto.tsx  Duo.tsx  Home.tsx  Solo.tsx
src/components/: GoBoard.tsx  test.tsx
src/pages/: Auto.tsx  Solo.tsx
